fix(sonar): eliminate remaining ResponseEntity<?>, @Autowired and RuntimeException issues across all controllers and services